# GOIT_python11_web_module_hw13

./: .example.env  README.md  pyproject.toml
postgres-data/: postmaster.pid
postgres-data/global/: pg_control
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/repository/: contacts.py
src/routes/: contacts.py  users.py
src/services/: auth.py  email.py
